# GangDev

./: .gitignore  .htaccess  404.php  AI_INSTRUCTIONS.md  README.md  about.html  about.php  basicCubeGame.html  basicCubeGame.php  basicFighterGame.html  basicFighterGame.php  basicPlatformerGame.html  bcube.html  bfgame.html  contact.html  contact.php  games.php  index.html  index.php  jens.html  jens.php  john.html  john.php  jorgen.html  jorgen.php  kate.html  kate.php  multiplayerSnakeGame.html  navBar.html  services.php  template.html
about/: index.php  style.css
account/: index.php  script.js  style.css
apps/: index.php  style.css
candor/: index.php  style.css
changelog/: index.php
const/: .gitignore
contact/: index.php
creodin/: index.php
crust/: install.sh
css/: bcube.css  button.css  navbar.css  oldNavBar.css  page.css  style.css
dating/: index.php  script.js  style.css
dcops/: index.php  script.js  style.css
f12/: index.php  learn.php  script.js  style.css
funny/: index.php
gaming/: index.php
home/: 404.php  index.php  process_contact.php  style.css
html/: about.html  copyright.html  home.html  jens.html  navBar.html  oldNavBar.html  repetitive.html
inspectre/: index.php  learn.php  style.css
js/: bfgame.js  navbar.js  script.js
json/: nouns.json  verbs.json
lafter/: index.php  riot.txt  script.js  style.css
lafter/connector/src-tauri/: Cargo.toml  tauri.conf.json
lafter/connector/src-tauri/capabilities/: default.json
lafter/connector/src-tauri/src/: auth.rs  lcu.rs  main.rs
main/: .gitignore  404.php  index.php  (+1 more)
(+540 files in other folders)
