[package]
name = "lafter-connector"
version = "0.1.0"
edition = "2021"
description = "Lafter desktop connector — streams champ select to your team"

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
sysinfo = "0.35"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
